@@ -587,7 +587,7 @@ sub __maybe_create_site_subdirs_or_die {
         #     ${site_dir}/cgi-bin
         #     ${site_dir}/htdocs/admin/cgi-bin  ->  ../../cgi-bin
         my $old = catdir( $site_dir, 'cgi-bin' );
-        die qq{was unable to create symlinks from "$new" to "$old"\n}
+        die qq{was unable to create symlinks from "$new" to "$old": $!\n}
             unless (with_changed_directory( dirname( $new ),
                                             sub { symlink( abs2rel( realpath( $old )),
                                                            basename($new)) })); # may throw fatal error
@@ -815,7 +815,7 @@ sub __maybe_create_named_index_dot_rock_file_or_die {
             }
         }
         eval {
-            die qq{was unable to create symlinks from "$indexroc" to "$indexrock"\n}
+            die qq{was unable to create symlinks from "$indexroc" to "$indexrock": $!\n}
                 unless (with_changed_directory( dirname( $indexrock ),
                                                 sub { symlink( basename($indexrock), basename($indexroc)) })); # may throw fatal error
         };
@@ -983,7 +983,7 @@ sub maybe_copy_dist_error_dot_rock_or_die {
             }
         }
         eval {
-            die qq{was unable to create symlink from "$errorroc" to "$errorrock"\n}
+            die qq{was unable to create symlink from "$errorroc" to "$errorrock": $!\n}
                 unless (with_changed_directory( dirname( $errorrock),
                                                 sub { symlink( basename($errorrock), basename($errorroc)) })); # may throw fatal error
         };
