@@ -1,3 +1,8 @@
+2008-03-04  Alan D. Salewski  <ASalewski@signatureinfo.com>
+
+	* src/main/perl/bin/bedrock-create-site.in (symlink): Added $! to
+	  die messages thrown from all failed symlink() invocations
+
 2008-03-03  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
 	* src/main/perl/bin/bedrock-create-site.in
